fix: @MockitoSettings(strictness = Strictness.LENIENT) annotation is added to avoid mockito UnnecessaryStubbingException.